--- a/facshop-resources/src/main/resources/ValidationMessages.properties
+++ b/facshop-resources/src/main/resources/ValidationMessages.properties
@@ -1,19 +1,19 @@
-person.firstname=Имя должно иметь минимум {min} и максимум {max} знаков.
-person.lastname=Фамилия должна иметь минимум {min} и максимум {max} знаков.
-person.email=Адрес электронной почты должен иметь подходящий формат.
-person.address=Адрес должен иметь минимум {min} и максимум {max} знаков.
-person.city=Наименование города должно иметь минимум {min} и максимум {max} знаков.
-person.password=Пароль должен иметь минимум {min} и максимум {max} знаков.
+person.firstname=\u0418\u043c\u044f \u0434\u043e\u043b\u0436\u043d\u043e \u0438\u043c\u0435\u0442\u044c \u043c\u0438\u043d\u0438\u043c\u0443\u043c {min} \u0438 \u043c\u0430\u043a\u0441\u0438\u043c\u0443\u043c {max} \u0437\u043d\u0430\u043a\u043e\u0432.
+person.lastname=\u0424\u0430\u043c\u0438\u043b\u0438\u044f \u0434\u043e\u043b\u0436\u043d\u0430 \u0438\u043c\u0435\u0442\u044c \u043c\u0438\u043d\u0438\u043c\u0443\u043c {min} \u0438 \u043c\u0430\u043a\u0441\u0438\u043c\u0443\u043c {max} \u0437\u043d\u0430\u043a\u043e\u0432.
+person.email=\u0410\u0434\u0440\u0435\u0441 \u044d\u043b\u0435\u043a\u0442\u0440\u043e\u043d\u043d\u043e\u0439 \u043f\u043e\u0447\u0442\u044b \u0434\u043e\u043b\u0436\u0435\u043d \u0438\u043c\u0435\u0442\u044c \u043f\u043e\u0434\u0445\u043e\u0434\u044f\u0449\u0438\u0439 \u0444\u043e\u0440\u043c\u0430\u0442.
+person.address=\u0410\u0434\u0440\u0435\u0441 \u0434\u043e\u043b\u0436\u0435\u043d \u0438\u043c\u0435\u0442\u044c \u043c\u0438\u043d\u0438\u043c\u0443\u043c {min} \u0438 \u043c\u0430\u043a\u0441\u0438\u043c\u0443\u043c {max} \u0437\u043d\u0430\u043a\u043e\u0432.
+person.city=\u041d\u0430\u0438\u043c\u0435\u043d\u043e\u0432\u0430\u043d\u0438\u0435 \u0433\u043e\u0440\u043e\u0434\u0430 \u0434\u043e\u043b\u0436\u043d\u043e \u0438\u043c\u0435\u0442\u044c \u043c\u0438\u043d\u0438\u043c\u0443\u043c {min} \u0438 \u043c\u0430\u043a\u0441\u0438\u043c\u0443\u043c {max} \u0437\u043d\u0430\u043a\u043e\u0432.
+person.password=\u041f\u0430\u0440\u043e\u043b\u044c \u0434\u043e\u043b\u0436\u0435\u043d \u0438\u043c\u0435\u0442\u044c \u043c\u0438\u043d\u0438\u043c\u0443\u043c {min} \u0438 \u043c\u0430\u043a\u0441\u0438\u043c\u0443\u043c {max} \u0437\u043d\u0430\u043a\u043e\u0432.
 
-category.name=Наименование категории должно иметь минимум {min} и максимум {max} знаков.
-category.tags=Метки должны иметь минимум {min} и максимум {max} знаков.
+category.name=\u041d\u0430\u0438\u043c\u0435\u043d\u043e\u0432\u0430\u043d\u0438\u0435 \u043a\u0430\u0442\u0435\u0433\u043e\u0440\u0438\u0438 \u0434\u043e\u043b\u0436\u043d\u043e \u0438\u043c\u0435\u0442\u044c \u043c\u0438\u043d\u0438\u043c\u0443\u043c {min} \u0438 \u043c\u0430\u043a\u0441\u0438\u043c\u0443\u043c {max} \u0437\u043d\u0430\u043a\u043e\u0432.
+category.tags=\u041c\u0435\u0442\u043a\u0438 \u0434\u043e\u043b\u0436\u043d\u044b \u0438\u043c\u0435\u0442\u044c \u043c\u0438\u043d\u0438\u043c\u0443\u043c {min} \u0438 \u043c\u0430\u043a\u0441\u0438\u043c\u0443\u043c {max} \u0437\u043d\u0430\u043a\u043e\u0432.
 
-product.name=Наименование продукта должно иметь минимум {min} и максимум {max} знаков.
-product.price.max=Цена должна быть ниже 30000.
-product.description=Описание продукта должно иметь минимум {min} и максимум {max} знаков.
-product.img=Наименование изображения должно иметь минимум {min} и максимум {max} знаков.
+product.name=\u041d\u0430\u0438\u043c\u0435\u043d\u043e\u0432\u0430\u043d\u0438\u0435 \u043f\u0440\u043e\u0434\u0443\u043a\u0442\u0430 \u0434\u043e\u043b\u0436\u043d\u043e \u0438\u043c\u0435\u0442\u044c \u043c\u0438\u043d\u0438\u043c\u0443\u043c {min} \u0438 \u043c\u0430\u043a\u0441\u0438\u043c\u0443\u043c {max} \u0437\u043d\u0430\u043a\u043e\u0432.
+product.price.max=\u0426\u0435\u043d\u0430 \u0434\u043e\u043b\u0436\u043d\u0430 \u0431\u044b\u0442\u044c \u043d\u0438\u0436\u0435 30000.
+product.description=\u041e\u043f\u0438\u0441\u0430\u043d\u0438\u0435 \u043f\u0440\u043e\u0434\u0443\u043a\u0442\u0430 \u0434\u043e\u043b\u0436\u043d\u043e \u0438\u043c\u0435\u0442\u044c \u043c\u0438\u043d\u0438\u043c\u0443\u043c {min} \u0438 \u043c\u0430\u043a\u0441\u0438\u043c\u0443\u043c {max} \u0437\u043d\u0430\u043a\u043e\u0432.
+product.img=\u041d\u0430\u0438\u043c\u0435\u043d\u043e\u0432\u0430\u043d\u0438\u0435 \u0438\u0437\u043e\u0431\u0440\u0430\u0436\u0435\u043d\u0438\u044f \u0434\u043e\u043b\u0436\u043d\u043e \u0438\u043c\u0435\u0442\u044c \u043c\u0438\u043d\u0438\u043c\u0443\u043c {min} \u0438 \u043c\u0430\u043a\u0441\u0438\u043c\u0443\u043c {max} \u0437\u043d\u0430\u043a\u043e\u0432.
 
-groups.name=Наименование группы должно иметь минимум {min} и максимум {max} знаков.
-groups.description=Описание группы должно иметь минимум {min} и максимум {max} знаков.
+groups.name=\u041d\u0430\u0438\u043c\u0435\u043d\u043e\u0432\u0430\u043d\u0438\u0435 \u0433\u0440\u0443\u043f\u043f\u044b \u0434\u043e\u043b\u0436\u043d\u043e \u0438\u043c\u0435\u0442\u044c \u043c\u0438\u043d\u0438\u043c\u0443\u043c {min} \u0438 \u043c\u0430\u043a\u0441\u0438\u043c\u0443\u043c {max} \u0437\u043d\u0430\u043a\u043e\u0432.
+groups.description=\u041e\u043f\u0438\u0441\u0430\u043d\u0438\u0435 \u0433\u0440\u0443\u043f\u043f\u044b \u0434\u043e\u043b\u0436\u043d\u043e \u0438\u043c\u0435\u0442\u044c \u043c\u0438\u043d\u0438\u043c\u0443\u043c {min} \u0438 \u043c\u0430\u043a\u0441\u0438\u043c\u0443\u043c {max} \u0437\u043d\u0430\u043a\u043e\u0432.
 
-order.status=Наименование статуса заказа должно иметь минимум {min} и максимум {max} знаков.
+order.status=\u041d\u0430\u0438\u043c\u0435\u043d\u043e\u0432\u0430\u043d\u0438\u0435 \u0441\u0442\u0430\u0442\u0443\u0441\u0430 \u0437\u0430\u043a\u0430\u0437\u0430 \u0434\u043e\u043b\u0436\u043d\u043e \u0438\u043c\u0435\u0442\u044c \u043c\u0438\u043d\u0438\u043c\u0443\u043c {min} \u0438 \u043c\u0430\u043a\u0441\u0438\u043c\u0443\u043c {max} \u0437\u043d\u0430\u043a\u043e\u0432.
