Поменял все пароли на 1234

--- a/facshop-store/src/main/webapp/WEB-INF/web.xml
+++ b/facshop-store/src/main/webapp/WEB-INF/web.xml
@@ -71,7 +71,7 @@
         <port-number>1527</port-number>
         <database-name>FACSHOPDB</database-name>
         <user>FACSHOPDB</user>
-        <password>app</password>
+        <password>1234</password>
         <property>
             <name>connectionAttributes</name>
             <value>;create=true</value>
