--- a/facshop-store/src/main/webapp/WEB-INF/web.xml
+++ b/facshop-store/src/main/webapp/WEB-INF/web.xml
@@ -47,7 +47,7 @@
     </welcome-file-list>
     <login-config>
         <auth-method>FORM</auth-method>
-        <realm-name>jdbcRealm</realm-name>
+        <realm-name>facshopJdbcRealm</realm-name>
         <form-login-config>
             <form-login-page>/login.xhtml</form-login-page>
             <form-error-page>/login.xhtml</form-error-page>
