--- a/facshop-payment/src/main/webapp/WEB-INF/web.xml
+++ b/facshop-payment/src/main/webapp/WEB-INF/web.xml
@@ -23,7 +23,7 @@
     </security-constraint>
     <login-config>
         <auth-method>BASIC</auth-method>
-        <realm-name>jdbcRealm</realm-name>
+        <realm-name>facshopJdbcRealm</realm-name>
     </login-config>
     <security-role>
         <role-name>USERS</role-name>
