--- a/facshop-store/pom.xml
+++ b/facshop-store/pom.xml
@@ -43,27 +43,47 @@
             <plugin>
                 <groupId>org.codehaus.mojo</groupId>
                 <artifactId>exec-maven-plugin</artifactId>
-                <version>1.3.2</version>
+                <version>${maven.exec.plugin.version}</version>
                 <executions>
                     <execution>
+                        <id>Flush JMS Queues</id>
                         <phase>compile</phase>
                         <goals>
                             <goal>exec</goal>
                         </goals>
+                        <configuration>
+                            <skip>false</skip>
+                            <executable>${glassfish.home}/bin/asadmin${glassfish.executables.suffix}</executable>
+                            <successCodes>
+                                <successCode>0</successCode>
+                                <successCode>1</successCode>
+                            </successCodes>
+                            <arguments>
+                                <argument>flush-jmsdest</argument>
+                                <argument>--desttype=queue</argument>
+                                <argument>PhysicalFacshopOrderQueue</argument>
+                            </arguments>                 
+                        </configuration>
+                    </execution>
+                    <execution>
+                        <id>Activate SSO and Default Principal To Role Mapping</id>
+                        <phase>compile</phase>
+                        <goals>
+                            <goal>exec</goal>
+                        </goals>
+                        <configuration>
+                            <skip>false</skip>
+                            <executable>${glassfish.home}/bin/asadmin${glassfish.executables.suffix}</executable>
+                            <arguments>
+                                <argument>set</argument>
+                                <argument>server.security-service.activate-default-principal-to-role-mapping=true</argument>
+                                <argument>server.http-service.sso-enabled=true</argument>
+                            </arguments>
+                        </configuration>
                     </execution>
                 </executions>
-                <configuration>
-                    <skip>false</skip>
-                    <executable>${glassfish.home}/bin/asadmin${glassfish.executables.suffix}</executable>
-                    <arguments>
-                        <argument>set</argument>
-                        <argument>server.security-service.activate-default-principal-to-role-mapping=true</argument>
-                        <argument>server.http-service.sso-enabled=true</argument>
-                    </arguments>
-                </configuration>
             </plugin>          
         </plugins>
-        
     </build>
 
 </project>
