--- a/pom.xml
+++ b/pom.xml
@@ -18,9 +18,9 @@
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <maven.exec.plugin.version>1.4.0</maven.exec.plugin.version>
         <integration.container.id>glassfish4x</integration.container.id>
         <glassfish.home>${glassfish.home.prefix}/glassfish4</glassfish.home>
-        <glassfish.domain.name>domain1</glassfish.domain.name>     
     </properties>
     
     <profiles>
@@ -51,59 +51,50 @@
     </profiles>
 		
     <modules>
-        <module>facshop-payment</module>
-        <module>facshop-resources</module>
-        <module>facshop-store</module>
         <module>facshop-events</module>
         <module>facshop-entities</module>
+        <module>facshop-resources</module>
+        <module>facshop-payment</module>
+        <module>facshop-store</module>
         <module>facshop-shipment</module>
     </modules>
        
     <build>
-        <pluginManagement>
-            <plugins>
-                <plugin>
-                    <groupId>org.apache.maven.plugins</groupId>
-                    <artifactId>maven-compiler-plugin</artifactId>
-                    <version>3.2</version>
-                    <configuration>
-                        <source>1.8</source>
-                        <target>1.8</target>
-                    </configuration>
-                </plugin>
-            </plugins>
-        </pluginManagement>
         <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.3</version>
+                <configuration>
+                    <source>1.8</source>
+                    <target>1.8</target>
+                </configuration>
+            </plugin>
             <plugin>
                 <groupId>org.codehaus.cargo</groupId>
                 <artifactId>cargo-maven2-plugin</artifactId>
-                <version>1.4.12</version>
+                <version>1.4.14</version>
                 <executions>
                     <execution>
-                        <id>deploy</id>
+                        <id>Deploy</id>
                         <phase>integration-test</phase>
                         <goals>
                             <goal>redeploy</goal>
                         </goals>
+                        <configuration>
+                            <container>
+                                <containerId>${integration.container.id}</containerId>
+                                <type>installed</type>
+                                <home>${glassfish.home}</home>
+                            </container>
+                            <configuration>
+                                <type>existing</type>
+                                <home>${glassfish.home}/glassfish/domains</home>
+                            </configuration>
+                        </configuration>
                     </execution>
-                </executions>
-                <configuration>
-                    <container>
-                        <containerId>${integration.container.id}</containerId>
-                        <type>installed</type>
-                        <home>${glassfish.home}</home>
-                    </container>
-                    <configuration>
-                        <type>existing</type>
-                        <home>${glassfish.home}/glassfish/domains</home>
-                        <properties>
-                            <cargo.glassfish.domain.name>${glassfish.domain.name}</cargo.glassfish.domain.name>
-                            <cargo.remote.username>admin</cargo.remote.username>
-                            <cargo.remote.password></cargo.remote.password> 
-                        </properties>
-                    </configuration>
-                </configuration>
-            </plugin>       	               
+                </executions>        
+            </plugin> 	               
         </plugins>
     </build>
     
