--- a/pom.xml
+++ b/pom.xml
@@ -90,6 +90,12 @@
                             <configuration>
                                 <type>existing</type>
                                 <home>${glassfish.home}/glassfish/domains</home>
+                                <properties>
+                                    <cargo.glassfish.domain.name>domain1</cargo.glassfish.domain.name>
+                                    <cargo.glassfish.admin.port>4848</cargo.glassfish.admin.port>
+                                    <cargo.remote.username>admin</cargo.remote.username>
+                                    <cargo.remote.password></cargo.remote.password>
+                                </properties>
                             </configuration>
                         </configuration>
                     </execution>
